--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,14 +1,38 @@
-@import './base.css';
+@import "./base.css";
+
+* {
+  font-family: "Rubik", sans-serif;
+}
+
+.titleSpecific {
+  border-left: 0.5vh solid #feca05;
+  padding: 3.6vh;
+  height: 25%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 1.6rem;
+}
 
 #app {
   max-width: 100%;
+  min-height: 100vh;
   margin: 0 auto;
-  padding: 0 2rem;
+  padding: 0;
+  padding-top: 70px;
+  padding-bottom: -70px;
+  position: relative;
   font-weight: normal;
+  /* overflow-x: hidden; */
 }
 
-#app{
-  background: linear-gradient(0deg, rgba(0, 3, 74, 0.2), rgba(0, 3, 74, 0.2)), linear-gradient(0deg, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), #294252;
+#app {
+  background: linear-gradient(0deg, rgba(0, 3, 74, 0.2), rgba(0, 3, 74, 0.2)),
+    linear-gradient(0deg, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), #294252;
+}
+
+main {
+  padding: 0 2rem 4rem 2rem;
 }
 
 a,
@@ -30,20 +54,27 @@ a,
   }
 }
 
-ul
-.n-dot{
+ul .n-dot {
   list-style-type: none;
 }
 
+@media (min-width: 1440px) {
+  body {
+    place-items: center;
+  }
+}
 @media (min-width: 1024px) {
   body {
     place-items: center;
   }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr; 
-    padding: 0 2rem;
+}
+@media (min-width: 768px) {
+  body {
+    place-items: center;
+  }
+}
+@media (min-width: 465px) {
+  body {
+    place-items: center;
   }
 }
